feat: Refactor and add test